@@ -14,18 +14,21 @@
 
 #include <stdexcept>
 
-#define createExceptionClass(name)                        \
-class name : public mind::MindException {                 \
-	public:                                                  \
-		name(const std::string &str) : MindException(str) {};   \
-		name(const char *str) : MindException(str) {};          \
-};                                                        \
-
 namespace mind {
 	class MindException : public std::runtime_error  {
 	public:
 		MindException(const std::string &str) : runtime_error(str) {}
 		MindException(const char *str) : runtime_error(str) {}
+	};
+	class MathException : public MindException {
+ public:
+		MathException(const std::string &str) : MindException(str) {}
+		MathException(const char *str) : MindException(str) {}
+	};
+	class NumberException : public MathException {
+ public:
+		NumberException(const std::string &str) : MathException(str) {}
+		NumberException(const char *str) : MathException(str) {}
 	};
 }
 
