@@ -1,3 +1,8 @@
+xx.01.2018
+	- Add flags for compile static and/or shared library from cmake 
+	- Add flag for strict mode library
+	- Rework of exceptions classes
+
 14.01.2018
 	- Fixed incorrect multiplication for var *= var
 	- Fixed incorrect multiplication if first operand have bigger size than second
